force-app/main/default/objects/Room__c/fields/Location_Account__c.field-meta.xml
<CustomField>
    <fullName>Location_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>