force-app/main/default/objects/Room__c/fields/Reporting_State__c.field-meta.xml
<CustomField>
    <fullName>Reporting_State__c</fullName>
    <label>Reporting State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>